// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enhanceHanson adds a "slug" key to the top-level 1`] = `
Object {
  "$type": "requirement",
  "message": "have a nice day",
  "name": "test",
  "slug": "test",
}
`;

exports[`enhanceHanson allows defining variables in result 1`] = `
Object {
  "$type": "requirement",
  "Req": Object {
    "$type": "requirement",
    "declare": Object {
      "math-level-3": "MATH 330, 340, 344, 348, 351, 356, 364, 382, 384",
    },
    "result": Object {
      "$count": Object {
        "$num": 1,
        "$operator": "$gte",
      },
      "$of": Array [
        Object {
          "$course": Object {
            "number": "330",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "340",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "344",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "348",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "351",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "356",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "364",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "382",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "384",
            "subject": "MATH",
          },
          "$type": "course",
        },
      ],
      "$type": "of",
    },
  },
  "result": Object {
    "$requirement": "Req",
    "$type": "reference",
  },
  "slug": "",
}
`;

exports[`enhanceHanson allows using variables in the filter 1`] = `
Object {
  "$type": "requirement",
  "Req": Object {
    "$type": "requirement",
    "declare": Object {
      "math-level-3": "MATH 330, 340, 344, 348, 351, 356, 364, 382, 384",
    },
    "filter": Object {
      "$distinct": false,
      "$filterType": "of",
      "$of": Array [
        Object {
          "$course": Object {
            "number": "330",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "340",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "344",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "348",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "351",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "356",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "364",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "382",
            "subject": "MATH",
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "number": "384",
            "subject": "MATH",
          },
          "$type": "course",
        },
      ],
      "$type": "filter",
    },
  },
  "result": Object {
    "$requirement": "Req",
    "$type": "reference",
  },
  "slug": "",
}
`;

exports[`enhanceHanson expands string-only keys into objects with a "result" key 1`] = `
Object {
  "$type": "requirement",
  "Requirement": Object {
    "$type": "requirement",
    "result": Object {
      "$course": Object {
        "number": "121",
        "subject": "CSCI",
      },
      "$type": "course",
    },
  },
  "result": Object {
    "$requirement": "Requirement",
    "$type": "reference",
  },
  "slug": "",
}
`;

exports[`enhanceHanson marks the top-level as a "requirement" 1`] = `
Object {
  "$type": "requirement",
  "message": "have a nice day",
  "slug": "",
}
`;

exports[`enhanceHanson parses "filter" strings with the Filter PEG rule 1`] = `
Object {
  "$type": "requirement",
  "Req": Object {
    "$type": "requirement",
    "filter": Object {
      "$distinct": false,
      "$filterType": "of",
      "$of": Array [
        Object {
          "$course": Object {
            "number": "121",
            "subject": "CSCI",
          },
          "$type": "course",
        },
      ],
      "$type": "filter",
    },
  },
  "result": Object {
    "$requirement": "Req",
    "$type": "reference",
  },
  "slug": "",
}
`;

exports[`enhanceHanson parses "result" strings with the Result PEG rule 1`] = `
Object {
  "$type": "requirement",
  "Req": Object {
    "$type": "requirement",
    "result": Object {
      "$count": Object {
        "$num": 1,
        "$operator": "$gte",
      },
      "$of": Array [
        Object {
          "$course": Object {
            "number": "121",
            "subject": "CSCI",
          },
          "$type": "course",
        },
      ],
      "$type": "of",
    },
  },
  "result": Object {
    "$requirement": "Req",
    "$type": "reference",
  },
  "slug": "",
}
`;
